[gd_scene load_steps=25 format=2]

[ext_resource path="res://Autoload/LevelGUI/LevelGUI.gd" type="Script" id=1]
[ext_resource path="res://Lib/Instanceable/ShakeBehavior/ShakeBehavior.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Theme/ClassicThemeV2/ClassicTheme_V2.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Image/GUI/PauseIcon.png" type="Texture" id=4]
[ext_resource path="res://GlobalClass/ExtendedButton.gd" type="Script" id=5]
[ext_resource path="res://Assets/Image/GUI/ProgressBar/ProgressCircleUnder.png" type="Texture" id=6]
[ext_resource path="res://Assets/Image/GUI/ProgressBar/ProgressCircleBg.png" type="Texture" id=7]
[ext_resource path="res://Assets/Image/GUI/ProgressBar/ProgressCircleTop.png" type="Texture" id=8]
[ext_resource path="res://Lib/Instanceable/BrightnessShader/BrightnessShader.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Fonts/8bitfont.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Image/GUI/ShieldIcon8x8.png" type="Texture" id=11]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BrightnessShader:brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.392157, 1, 1 ), Color( 0, 0.392157, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("HpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextHbox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.25098, 0.376471, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("TextHbox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextHBox:custom_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 2.21914, 0.203063 ),
"update": 0,
"values": [ 0, 0, 255 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextHBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ReadyLabel/TextFlashAnim:current_animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ "Flash", "Stop" ]
}

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, -2.5, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../MarginContainer/ShakeBehavior")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "start_shake"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ShakeBehavior")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "start_shake"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:custom_constants/margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 8, -64 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:custom_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 8, -64 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:custom_constants/margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 8, -64 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer:custom_constants/margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ 8, -64 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:custom_constants/margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -64, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:custom_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -64, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:custom_constants/margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -64, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer:custom_constants/margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -64, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="LevelGUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="PlayfieldGUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShakeBehavior" parent="MarginContainer" instance=ExtResource( 2 )]
root_node = NodePath("./..")
process_mode = 0
initial_active = false
shake_duration = 0.3
shake_magnitude = 16.0
shake_frequency = 60.0
infinite_duration = false
shake_curve = SubResource( 1 )
shake_offset = Vector2( 0, 0 )
vector_property_to_set = "rect_position"

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 392.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="MarginContainer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -28.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHpBar" type="Control" parent="MarginContainer/Control"]
margin_right = 112.0
margin_bottom = 72.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Control/PlayerHpBar"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvHpSuper" type="HBoxContainer" parent="MarginContainer/Control/PlayerHpBar/VBox"]
margin_right = 94.0
margin_bottom = 32.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelBar" type="TextureProgress" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper"]
self_modulate = Color( 0, 0.392157, 1, 1 )
margin_right = 32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_vertical = 0
value = 57.0
allow_greater = true
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrightnessShader" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/LevelBar" instance=ExtResource( 9 )]

[node name="Label" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/LevelBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "300"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUpAnim" type="AnimationPlayer" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/LevelBar"]
anims/LevelUp = SubResource( 2 )

[node name="HpSuperVBox" type="VBoxContainer" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper"]
margin_left = 40.0
margin_right = 94.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpText" type="HBoxContainer" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 54.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 2

[node name="Value" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox/HpText"]
margin_right = 24.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9999"

[node name="Label" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox/HpText"]
margin_left = 24.0
margin_right = 30.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "/"

[node name="MaxValue" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox/HpText"]
margin_left = 30.0
margin_right = 54.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9999"

[node name="HpBar" type="ProgressBar" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox"]
self_modulate = Color( 0, 1, 0.0862745, 1 )
margin_top = 11.0
margin_right = 54.0
margin_bottom = 16.0
mouse_filter = 2
value = 80.0
percent_visible = false

[node name="SuperBar" type="ProgressBar" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox"]
self_modulate = Color( 1, 0.447059, 0, 1 )
margin_top = 16.0
margin_right = 54.0
margin_bottom = 21.0
mouse_filter = 2
value = 40.0
percent_visible = false

[node name="HpAnim" type="AnimationPlayer" parent="MarginContainer/Control/PlayerHpBar/VBox/LvHpSuper/HpSuperVBox"]
anims/Low = SubResource( 3 )
anims/Normal = SubResource( 4 )

[node name="Shield" type="HBoxContainer" parent="MarginContainer/Control/PlayerHpBar/VBox"]
margin_top = 36.0
margin_right = 33.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 0
custom_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/PlayerHpBar/VBox/Shield"]
modulate = Color( 0.254902, 0.596078, 1, 1 )
margin_right = 8.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 4

[node name="TextHbox" type="HBoxContainer" parent="MarginContainer/Control/PlayerHpBar/VBox/Shield"]
margin_left = 9.0
margin_right = 33.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="Value" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/Shield/TextHbox"]
margin_right = 18.0
margin_bottom = 11.0
rect_min_size = Vector2( 18, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100"
align = 2

[node name="Label" type="Label" parent="MarginContainer/Control/PlayerHpBar/VBox/Shield/TextHbox"]
margin_left = 18.0
margin_right = 24.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "%"

[node name="ShieldAnim" type="AnimationPlayer" parent="MarginContainer/Control/PlayerHpBar/VBox/Shield"]
anims/Low = SubResource( 5 )
anims/Normal = SubResource( 6 )

[node name="LevelText" type="Control" parent="."]
visible = false
anchor_right = 1.0
margin_top = 96.0
margin_bottom = 112.0
grow_vertical = 2
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="LevelText"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextHBox" type="HBoxContainer" parent="LevelText"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
mouse_filter = 2
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelText/TextHBox"]
margin_left = 697.0
margin_top = 2.0
margin_right = 703.0
margin_bottom = 13.0
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LevelText/TextHBox"]
margin_left = 703.0
margin_top = 2.0
margin_right = 708.0
margin_bottom = 13.0
text = "o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="LevelText/TextHBox"]
margin_left = 708.0
margin_top = 2.0
margin_right = 713.0
margin_bottom = 13.0
text = "r"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="LevelText/TextHBox"]
margin_left = 713.0
margin_top = 2.0
margin_right = 717.0
margin_bottom = 13.0
text = "t"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="LevelText/TextHBox"]
margin_left = 717.0
margin_top = 2.0
margin_right = 722.0
margin_bottom = 13.0
text = "h"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="LevelText/TextHBox"]
margin_left = 722.0
margin_top = 2.0
margin_right = 725.0
margin_bottom = 13.0
text = " "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="LevelText/TextHBox"]
margin_left = 725.0
margin_top = 2.0
margin_right = 730.0
margin_bottom = 13.0
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="LevelText/TextHBox"]
margin_left = 730.0
margin_top = 2.0
margin_right = 734.0
margin_bottom = 13.0
text = "t"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="LevelText/TextHBox"]
margin_left = 734.0
margin_top = 2.0
margin_right = 740.0
margin_bottom = 13.0
text = "a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="LevelText/TextHBox"]
margin_left = 740.0
margin_top = 2.0
margin_right = 745.0
margin_bottom = 13.0
text = "r"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyLabel" type="Label" parent="LevelText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
text = "Ready!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextFlashAnim" type="AnimationPlayer" parent="LevelText/ReadyLabel"]
anims/Flash = SubResource( 7 )
anims/Stop = SubResource( 8 )

[node name="LevelTextAnim" type="AnimationPlayer" parent="LevelText"]
anims/FlyinOut = SubResource( 9 )

[node name="Damage" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShakeBehavior" parent="Damage" instance=ExtResource( 2 )]
root_node = NodePath("./..")
process_mode = 0
initial_active = false
shake_duration = 0.3
shake_magnitude = 8.0
shake_frequency = 60.0
infinite_duration = false
shake_curve = SubResource( 10 )
shake_offset = Vector2( 0, 0 )
vector_property_to_set = "rect_position"

[node name="ColorRect" type="ColorRect" parent="Damage"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 0.552941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Damage"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Damage/MarginContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 220.0
margin_bottom = 396.0
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageAnim" type="AnimationPlayer" parent="Damage"]
anims/Damage = SubResource( 11 )

[node name="ShowHideAnim" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 12 )
anims/Show = SubResource( 13 )
